tests/fail/d008_main_non_int.dew
# D008: main must return Int, found Bool
def main = fn () {
    true
}
